# lib/db/src/schema/index.ts
@@ -11,3 +11,7 @@ export * from "./maintenanceReminders";
 export * from "./receivables";
 export * from "./users";
 export * from "./products";
+export * from "./wholesaleCustomers";
+export * from "./wholesaleQuotes";
+export * from "./wholesaleOrders";
+export * from "./wholesaleReceivables";
